@@ -2,7 +2,8 @@ PYTHON27_PREFIX=/usr
 PYTHON27_HEADERS=$(PYTHON27_PREFIX)/include/python2.7
 PYTHON27_LIBS=$(PYTHON27_PREFIX)/lib
 
-XED_PREFIX=pin-2.13-65163-gcc.4.4.7-linux/extras/xed2-ia32
+XED_PREFIX=pin-2.14-67254-gcc.4.4.7-linux/extras/xed2-ia32
+# XED_PREFIX=pin-2.14-67254-gcc.4.4.7-linux/extras/xed2-intel64
 XED_HEADERS=$(XED_PREFIX)/include
 XED_LIBS=$(XED_PREFIX)/lib
 
